--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <p style="text-align: center;">To run the GTA VI system requirements, we predict you will need an NVIDIA GeForce GTX 1660 GPU, an Intel Core i5-6600K CPU, 12GB of RAM, and 150GB of SSD space.</p>
 
   <div style="text-align: center;">
-    <img src="/images/IMG_20240904_204642.jpg" width="425px" height="425px" alt="GTA VI Image 1">
+    <img src="https://github.com/TheArkamDev/gta6-pc-requirements/blob/main/17017052216381.jpg" width="425px" height="425px" alt="GTA VI Image 1">
   </div>
 
   <p style="text-align: center;">Grand Theft Auto VI (GTA 6) is highly anticipated for its return to the vibrant Vice City, expanding on the open-world gameplay and multi-protagonist storytelling that fans love. Expected to feature enhanced graphics, realistic environments, and a robust online multiplayer experience, the game aims to push the boundaries of interactive entertainment. Although Rockstar Games has yet to announce an official release date, the excitement continues to build as more details emerge about this next chapter in the iconic series.</p>
